Fixes text overflow on activities catalog

--- a/assets/styles/mybooking-engine-product.css
+++ b/assets/styles/mybooking-engine-product.css
@@ -419,7 +419,7 @@ div.mybooking-product {
   width: 100%;
   height: calc(var(--mb-product-body-height) - 40px);
   clear: both;
-  box-shadow: inset 0 -1.5rem 3rem rgba(255,255,255,0.9)
+  box-shadow: inset -1.5rem -1.5rem 3rem rgba(255,255,255,0.9)
 }
 
 .entry-content h3.mybooking-product_short-description {
